--- a/client/image_share.html
+++ b/client/image_share.html
@@ -3,20 +3,37 @@
 </head>
 
 <body>
-	{{> image_add_form}}
-	
+
+</body>
+
+<template name="ApplicaitonLayout">
+	{{> yield "navbar"}}
+	{{> yield "main"}}
+</template>
+
+<template name="navbar">
 	<nav class="navbar navbar-default navbar-fixed-top">	
 	<div class="container"> 
 	{{> loginButtons}}
 	</div>
 	</nav>
-	
-	<div class="container">		
-		<h1>Welcome to image share {{username}}!</h1>
-	
-		{{> images}}
+</template>
+
+<template name="welcome">
+	<div class="container">
+		<div class="jumbotron">
+			<h1>Welcome to image share {{username}}!</h1>	
+			<a href="/images" class="btn btn-info">ENTER</a>
+		</div>
 	</div>
-</body>
+</template>
+
+<template name="image">
+	<div class="container">
+	<h2>{{img_alt}}</h2>
+	<a href="/images"><img class="single-img" src="/{{img_src}}"/></a>
+	</div>
+</template>
 
 <template name="image_add_form">
 	<div class="modal fade" id="image_add_form">
@@ -39,11 +56,10 @@
 	</div>
 	</div>
 	</div>
-
-	
 </template>
 
 <template name="images">
+	<div class="container js-container">
 	{{#if currentUser}}
 	<button class="btn btn-success js-show-image-form">add image</button>
 	{{/if}}
@@ -56,7 +72,7 @@
 		{{#each images}}
 			<div class="col-xs-12 col-md-3" id="{{_id}}">
 				<div class="thumbnail">
-					<img class="js-image thumbnail-img" src="{{img_src}}" alt="{{img_alt}}"  />
+					<a href="/image/{{_id}}"><img class="js-image thumbnail-img" src="{{img_src}}" alt="{{img_alt}}"  /></a>
 						<div class="caption">
 							<h3>Rating: {{rating}}</h3>
 							<p>{{img_alt}}</p>
@@ -68,4 +84,5 @@
 			</div><!-- /col-->
 		{{/each}}
 	</div> <!-- /row -->
+	</div> <!-- /container -->
 </template>
